<resources>
    //Login Page
    <string name="app_name">Kurir App</string>
    <string name="button_in">Log In</string>
    <string name="hint_name">Username or email</string>
    <string name="hint_password">Password</string>

    //Home Page
    <string name="title_home">Home</string>
    <string name="welcome">Welcome to</string>
    <string name="kurir_app">Kurir App</string>
    <string name="top_app">#1 Route Optimization App</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="vehicle_motorcycle">Motorcycle</string>
    <string name="vehicle_car">Car</string>
    <string name="recent_history">Recent History</string>
    <string name="arrow">Forward Arrow</string>

    //Destination Page
    <string name="back">Back</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="vehicle_option">Vehicle Option</string>
    <string name="your_location">Your Location</string>
    <string name="your_destination">Your Destination</string>
    <string name="switch_location">Switch Location</string>
    <string name="add_destination">Add Destination</string>
    <string name="remove_destination">Remove Destination</string>
    <string name="optimize">Optimize</string>
    <string name="map_location">Map Location</string>
    <string name="select_location">Select Location</string>

    //Result Page
    <string name="close_popup_button">Close Button</string>
    <string name="begin_trip">Finish</string>
    <string name="error_loading_route">Failed to load route: %1$s</string>
    <string name="route_number">Route %1$d</string>
    <string name="show_pop_up">Show Routes</string>
    <string name="error">Error</string>
    <string name="center_on_user">My Location</string>

    //Task Page
    <string name="title_task">Task</string>
    <string name="title_page_task">Task List</string>
    <string name="task_name">Task</string>
    <string name="do_task">Do Task</string>
    <string name="end_task">End Task</string>

    //History Page
    <string name="title_history">History</string>
    <string name="title_page_history">Trip History</string>
    <string name="empty_history">No Trip History</string>

    //Profile Page
    <string name="title_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="button_out">Log Out</string>

    //Content Description
    <string name="delete">Delete</string>
    <string name="vehicle">Vehicle</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="profile">Profile</string>

</resources>