<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.palmar.kurirapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_task"
        android:name="com.palmar.kurirapp.ui.task.TaskFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.palmar.kurirapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.palmar.kurirapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>